--- a/layouts/partials/default_foot.html
+++ b/layouts/partials/default_foot.html
@@ -3,5 +3,28 @@
 
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
+  {{ $highVer := (.Site.Params.highlightjsVersion | default "9.12.0") }}
+  {{ $highCDN := (.Site.Params.highlightjsCDN | default "//cdnjs.cloudflare.com/ajax/libs") }}
+  <script src="{{ $highCDN }}/highlight.js/{{ $highVer }}/highlight.min.js"></script>
+  {{ $.Scratch.Set "highLangs" .Site.Params.highlightjsLang }}
+  {{ range .Params.highlightjsLang }}{{ $.Scratch.Add "highLangs" . }}{{ end }}
+  {{ range ($.Scratch.Get "highLangs") }}
+  <script src="{{ $highCDN }}/highlight.js/{{ $highVer }}/languages/{{ . }}.min.js"></script>{{ end }}
+  <script>hljs.configure({languages: []}); hljs.initHighlightingOnLoad();</script>
+
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      extensions: ["tex2jax.js"],
+      jax: ["input/TeX", "output/HTML-CSS"],
+      tex2jax: {
+        inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+        displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+        processEscapes: true
+      },
+      "HTML-CSS": { fonts: ["TeX"] }
+    });
+  </script>
+  <script async src="{{ .Site.Params.MathJaxCDN | default "//cdnjs.cloudflare.com/ajax/libs" }}/mathjax/{{ .Site.Params.MathJaxVersion | default "2.7.5" }}/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+
   </body>
 </html>
