--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,6 +13,11 @@
     {{ end }}
   </title>
 
+  {{ $highTheme := .Site.Params.highlightjsTheme }}
+  {{ with .Site.Params.highlightjsVersion }}
+  <link href='{{ $.Site.Params.highlightjsCDN | default "//cdnjs.cloudflare.com/ajax/libs" }}/highlight.js/{{ . }}/styles/{{ $highTheme }}.min.css' rel='stylesheet' type='text/css' />
+  {{ end }}
+
   <!-- CSS -->
   <link rel="stylesheet" href="/css/poole.css">
   <link rel="stylesheet" href="/css/syntax.css">
